--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     color: rgb(7, 1, 1);
-    background: #2ad4ad;
+    background: #96CAE0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
